# FinGraph

./: .gitignore  README.md  ROADMAP.md  integration_test.sh
data_ingestion/: .clangd  CMakeLists.txt  compile_commands.json
data_ingestion/include/fingraph/: APIClient.h  DataIngestionServer.h  DatabaseManager.h
data_ingestion/src/: APIClient.cpp  DataIngestionServer.cpp  DatabaseManager.cpp  http_main.cpp  main.cpp
database/: README.md  schema.sql
database/migrations/: 001_initial_schema.sql  002_add_backtest_tables.sql
database/scripts/: backup.sh  migrate.sh  seed.sh
database/seeds/: symbols.sql
docker/: README.md  docker-compose.prod.yml  docker-compose.yml
docker/base/: Dockerfile.cpp-base
docker/data-ingestion/: Dockerfile
docker/database/: Dockerfile  init-db.sh
docker/nginx/: nginx.conf
docker/scripts/: build-data-ingestion.sh  build-simulation-engine.sh  build-web-server.sh  deploy-all.sh  setup-database.sh
docker/simulation-engine/: Dockerfile
docker/web-server/: Dockerfile
fingraph_frontend/: README.md  package-lock.json  package.json
fingraph_frontend/src/app/: layout.tsx  page.tsx
fingraph_frontend/src/app/strategies/: page.tsx
fingraph_frontend/src/app/strategy/[id]/: page.tsx
fingraph_frontend/src/components/: EquityChart.tsx  PerformanceMetrics.tsx  PriceChart.tsx
fingraph_frontend/src/lib/: api.ts
simulation_engine/: CMakeLists.txt
simulation_engine/.cache/clangd/index/: Backtest.cpp.339142599996B1C2.idx  Backtest.h.C194D01661FAB48A.idx  MarketData.cpp.AEE8FC149B6F2606.idx  MarketData.h.CA90926A8DDBA465.idx  MovingAverageStrategy.cpp.A0E178DAEA27211B.idx  MovingAverageStrategy.h.D41747E2FD90B426.idx  PerformanceMetrics.cpp.7F343220A11ACA6D.idx  PerformanceMetrics.h.417C6CE3D0962A5E.idx  Portfolio.cpp.D85C0305A6A948BC.idx  Portfolio.h.97BC600B094F6691.idx  RSIStrategy.cpp.6AD46FACE5B7D80B.idx  RSIStrategy.h.AE903CE0A9A99ABA.idx  Strategy.h.5CCD37653F480346.idx  Trade.cpp.A8B3FC4656BF5043.idx  Trade.h.8CC68A5CA81E36F9.idx  main.cpp.E86076C6A1F5E3E1.idx  tests.cpp.62A5FA95DBF7DFBC.idx
simulation_engine/include/fingraph/: Backtest.h  DatabaseService.h  JobManager.h  MarketData.h  PerformanceMetrics.h  Portfolio.h  SimulationEngineServer.h  Strategy.h  Trade.h
simulation_engine/include/fingraph/strategies/: MovingAverageStrategy.h  RSIStrategy.h
simulation_engine/proto/: simulation_engine.proto
simulation_engine/src/: Backtest.cpp  DatabaseService.cpp  JobManager.cpp  MarketData.cpp  PerformanceMetrics.cpp  Portfolio.cpp  SimulationEngineServer.cpp  Trade.cpp  grpc_main.cpp  main.cpp
simulation_engine/src/strategies/: MovingAverageStrategy.cpp  RSIStrategy.cpp
simulation_engine/tests/: CMakeLists.txt  tests.cpp
web_server/: .clangd  CMakeLists.txt
web_server/.cache/clangd/index/: BacktestController.cpp.484EE78ABCEB9178.idx  BacktestController.h.34B8CE80B03A4767.idx  BacktestService.cpp.BB8EA29480BD54A7.idx  BacktestService.h.07C879BD12EFE2B4.idx  DataController.cpp.5363A6534514D67A.idx  DataController.h.772620BC5033A30D.idx  DataService.cpp.F537016C4B419B63.idx  DataService.h.BB4FAA9E971DA59A.idx  SimulationEngineClient.cpp.B24B3AF097F6179D.idx  SimulationEngineClient.h.B1AE9D4F00E7917E.idx  main.cpp.1667AD181CAAA7BD.idx
web_server/config/: config.json
web_server/src/: main.cpp
web_server/src/controllers/: BacktestController.cpp  BacktestController.h  DataController.cpp  DataController.h  StrategyController.cpp  StrategyController.h
web_server/src/services/: BacktestService.cpp  BacktestService.h  DataService.cpp  DataService.h
web_server/src/utils/: SimulationEngineClient.cpp  SimulationEngineClient.h
